<resources>
    <string name="app_name">Cinamon</string>
    <string name="registration_cinamon">Cinamon</string>
    <string name="reg_bttn_sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reg_bttn_log_in">Log In</string>
    <string name="big_text_log_in">Log In</string>
    <string name="login_email_address">EMAIL ADDRESS</string>
    <string name="login_password">PASSWORD</string>
    <string name="oops_your_email_address_password_is_inorrect">Oops! Your email address/password is inorrect.</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="default_currency">Default Currency</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="suggest_subscription">Suggest Subscription</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="pro_version">PRO Version</string>
    <string name="log_out_of_person_gmail_com">Log out of person@gmail.com</string>
    <string name="version_1_0_0">1.0.0</string>
    <string name="eur">EUR</string>
    <string name="light_mode">Light Mode</string>


    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
</resources>
