<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/rectangle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/roboto"
        android:text="@string/default_currency"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/bttnBackArrowSettings"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/backbutton" />

    <ImageView
        android:id="@+id/bttnSuggestSubscriptionGmail"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/backbutton2" />

    <ImageView
        android:id="@+id/bttnRateThisApp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/backbutton2" />

    <ImageView
        android:id="@+id/bttnProVersion"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/backbutton2" />

    <TextView
        android:id="@+id/tvSettingsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/general"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/about"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/roboto"
        android:text="@string/version"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="260dp"
        android:fontFamily="@font/roboto"
        android:text="@string/suggest_subscription"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/roboto"
        android:text="@string/rate_this_app"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="340dp"
        android:fontFamily="@font/roboto"
        android:text="@string/pro_version"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="380dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:text="Log out"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/roboto"
        android:text="@string/version_1_0_0"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/roboto"
        android:text="@string/eur"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />


</FrameLayout>