<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/bttnBackArrowLogin"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/backbutton" />

    <TextView
        android:id="@+id/tvLoginBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/big_text_log_in"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvEmailAdressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="45dp"
        android:layout_marginTop="205dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_email_address"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:inputType="text|textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="45dp"
        android:layout_marginTop="305dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_password"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvOopsWrongPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/oops_your_email_address_password_is_inorrect"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvForgotYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="45dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_your_password"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bttnLogin"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonstyle"
        android:elevation="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/reg_bttn_log_in"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />
</FrameLayout>