<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ChooseLoginSignUp">


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="35dp"
        android:contentDescription="appIconRegistrationActivity"
        app:srcCompat="@drawable/newicon" />

    <TextView
        android:id="@+id/tvIconName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/raleway"
        android:text="Aiden"
        android:textColor="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/progressbar_circular"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="100dp" />

    <Button
        android:id="@+id/bttnSignUpChooseReg"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/buttonstyle"
        android:elevation="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/reg_bttn_sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/bttnGoogleSignIn"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/tvAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="85dp"
        android:fontFamily="@font/raleway"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/bttnLoginChooseReg"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonstyle"
        android:elevation="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/reg_bttn_log_in"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</FrameLayout>